lista para render again

--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -10,9 +10,9 @@
       <thead>
         <tr>
           <th class=" text-white bg-warning mb-3" scope="col">#</th>
-          <th class=" text-white bg-warning mb-3" scope="col">Name</th>
-          <th class=" text-white bg-warning mb-3" scope="col">Age</th>
-          <th class=" text-white bg-warning mb-3" scope="col">Movie</th>
+          <th class=" text-white bg-warning mb-3" scope="col">Nombre</th>
+          <th class=" text-white bg-warning mb-3" scope="col">Edad</th>
+          <th class=" text-white bg-warning mb-3" scope="col">Pelicula</th>
           <th class=" text-white bg-warning mb-3" scope="col" colspan="3"></th>
         </tr>
       </thead>
